div.box selector overflow correction

--- a/client/src/mystyles.scss
+++ b/client/src/mystyles.scss
@@ -46,8 +46,8 @@ div.container {
         // max-height: 600px;
         // display: flex;
       div.card {
-        display: flex;
-        flex-flow: column nowrap;
+        // display: flex;
+        // flex-flow: column nowrap;
         div.card-image img{
           max-height: 500px;
           object-fit: cover;
@@ -72,7 +72,7 @@ div.form-container {
 
 div#below-fold.container {
   
-  div.box {
+  div.box.calendar-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -80,14 +80,13 @@ div#below-fold.container {
   }
   @media #{$tablet-break} {
     width: 100%;
-    
     display: grid;
     grid-template-rows: 25px 25px 500px 1fr;
     grid-template-columns: repeat(2, 1fr);
     justify-items: center;
 
 
-    div.box {
+    div.box.calendar-wrapper{
       grid-column: 1 / 2;
       grid-row: 2 / 4;
     }
@@ -99,6 +98,7 @@ div#below-fold.container {
     div#gnostic-display-wrapper {
       grid-column: 2 / 3;
       grid-row: -3 / -1;
+      
     }
 
     button {
